# mavlinklog_publisher

./: .gitignore  CMakeLists.txt  README.md  package.xml
msg/: LogMsg.msg  MavlinkLogMsg.msg
src/: logmsg_publisher.cpp  mavlinklog_publisher_node.cpp  mavlinklogmsg_publisher.cpp  mavlinklogmsg_subscriber.cpp  my_node.cpp
